<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/keyboard_width"
    android:layout_height="@dimen/keyboard_height"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="@dimen/keyboard_linearlayout_eidt_width"
        android:layout_height="@dimen/keyboard_linearlayout_edit_height"
        android:orientation="horizontal"
		android:layout_marginLeft="@dimen/keyboard_linearlayout_edit_marginleft"
        android:background="@drawable/keyboard_inputbox"
        >
		<TextView
            style="@style/BluetoothSet_Text_Style"
            android:layout_width="@dimen/keyboard_textview_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/keyboard_textview_marginleft"
            android:gravity="center_vertical"
            android:id="@+id/text_keyboard_input"/>
        <Button
            android:layout_width="@dimen/keyboard_btn_delete_width"
            android:layout_height="@dimen/keyboard_btn_delete_height"
            android:layout_marginLeft="@dimen/keyboard_btn_delete_marginleft"
            android:background="@drawable/btn_keyboard_delete"
            android:id="@+id/btn_keyboard_delete"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/keyboard_linearlayout_btn_width"
        android:layout_height="@dimen/keyboard_linearlayout_btn_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/keyboard_layout_btntoeidt_margintop"
        >
        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_1"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_1"
                android:gravity="center_vertical|right"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_2"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_2"
                android:gravity="center_vertical|right"
                />
		    <TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_abc"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_3"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_3"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_def"
                android:gravity="center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/keyboard_linearlayout_btn_width"
        android:layout_height="@dimen/keyboard_linearlayout_btn_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/keyboard_layout_btntobtn_margintop"
        >
        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_4"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_4"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_ghi"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_5"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_5"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_jkl"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_6"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_6"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_mno"
                android:gravity="center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/keyboard_linearlayout_btn_width"
        android:layout_height="@dimen/keyboard_linearlayout_btn_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/keyboard_layout_btntobtn_margintop"
        >
        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_7"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_7"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_pqrs"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_8"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_8"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_tuv"
                android:gravity="center_vertical"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_9"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_9"
                android:gravity="center_vertical|right"
                />
			<TextView
                style="@style/BluetoothSet_LetterText_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				android:layout_marginLeft="@dimen/keyboard_text_letter_marginleft"
                android:text="@string/keyboard_wxyz"
                android:gravity="center_vertical"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/keyboard_linearlayout_btn_width"
        android:layout_height="@dimen/keyboard_linearlayout_btn_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/keyboard_layout_btntobtn_margintop"
        >
        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_a"
                />
            <TextView
                style="@style/BluetoothKeyPad_StringText1_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
				android:layout_marginTop="@dimen/keyboard_text_char_margintop"
                android:layout_height="@dimen/keyboard_text_char_height"
                android:text="@string/keyboard_a"
                android:gravity="center_vertical|right"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_0"
                />
            <TextView
                style="@style/BluetoothSet_Text_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_0"
                android:gravity="center_vertical|right"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/keyboard_imgbtn_width"
            android:layout_height="@dimen/keyboard_imgbtn_height"
            android:layout_marginLeft="@dimen/keyboard_imgbtn_marginleft">
            <ImageButton
                android:layout_width="@dimen/keyboard_imgbtn_width"
                android:layout_height="@dimen/keyboard_imgbtn_height"
                style="@style/image_button"
                android:background="@drawable/btn_keyboard"
                android:id="@+id/imgbtn_keyboard_b"
                />
            <TextView
                style="@style/BluetoothKeyPad_StringText_Style"
                android:layout_width="@dimen/keyboard_text_number_width"
                android:layout_height="match_parent"
                android:text="@string/keyboard_b"
                android:gravity="center_vertical|right"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
