<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluetooth_dialog_bg"
    >
    <TextView
        style="@style/BluetoothSet_Text_Style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bluetoothset_dialog_text_name_height"
        android:layout_marginTop="@dimen/bluetoothset_dialog_text_name_margintop"
        android:gravity="center"
        android:id="@+id/text_dialog_bluetooth_name"
        />
    <TextView
        style="@style/BluetoothSet_Text_Style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bluetoothset_dialog_text_pincode_height"
        android:layout_marginTop="@dimen/bluetoothset_dialog_text_pincode_margintop"
        android:gravity="center"
        android:id="@+id/text_dialog_bluetooth_pincode"
        />
    <Button
        style="@style/BluetoothSet_Text_Style"
        android:layout_width="@dimen/bluetoothset_dialog_btn_pair_width"
        android:layout_height="@dimen/bluetoothset_dialog_btn_pair_height"
        android:layout_marginLeft="@dimen/bluetoothset_dialog_btn_pair_marginleft"
        android:layout_marginTop="@dimen/bluetoothset_dialog_btn_pair_margintop"
        android:id="@+id/btn_bluetooth_pair"
        android:text="@string/bluetooth_dialog_pair"
        android:background="@drawable/btn_bluetooth_dialog"
        />
    <Button
        style="@style/BluetoothSet_Text_Style"
        android:layout_width="@dimen/bluetoothset_dialog_btn_pair_delete_width"
        android:layout_height="@dimen/bluetoothset_dialog_btn_pair_delete_height"
        android:layout_marginLeft="@dimen/bluetoothset_dialog_btn_pair_delete_marginleft"
        android:layout_marginTop="@dimen/bluetoothset_dialog_btn_pair_delete_margintop"
        android:id="@+id/btn_bluetooth_pair_delete"
        android:text="@string/bluetooth_dialog_delete"
        android:background="@drawable/btn_bluetooth_dialog"
        android:visibility="gone"
        />
    <Button
        style="@style/BluetoothSet_Text_Style"
        android:layout_width="@dimen/bluetoothset_dialog_btn_pair_cancel_width"
        android:layout_height="@dimen/bluetoothset_dialog_btn_pair_cancel_height"
        android:layout_marginLeft="@dimen/bluetoothset_dialog_btn_pair_cancel_marginleft"
        android:layout_marginTop="@dimen/bluetoothset_dialog_btn_pair_cancel_margintop"
        android:id="@+id/btn_bluetooth_pair_cancel"
        android:text="@string/bluetooth_dialog_cancel"
        android:background="@drawable/btn_bluetooth_dialog"
        />

</RelativeLayout>