<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autochips.bluetooth.BluetoothPhoneBookActivity">
    <RelativeLayout
        android:layout_width="@dimen/keyboard_width"
        android:layout_height="@dimen/keyboard_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_layout_keyboard_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_layout_keyboard_margintop"
        android:id="@+id/layout_bluetoothphonebook_keyboard"
        >
        <include layout="@layout/keyboard"></include>
    </RelativeLayout>
    <Button
        android:layout_width="@dimen/bluetoothphonebook_btn_call_width"
        android:layout_height="@dimen/bluetoothphonebook_btn_call_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_btn_call_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_btn_call_margintop"
        android:id="@+id/btn_phonebook_call"
        android:background="@drawable/btn_bluetoothphonebook_call"/>
    <Button
        android:layout_width="@dimen/bluetoothphonebook_btn_set_width"
        android:layout_height="@dimen/bluetoothphonebook_btn_set_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_btn_set_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_btn_set_margintop"
        android:id="@+id/btn_phonebook_set_up"
        android:background="@drawable/btn_bluetoothphonebook_extend"/>
    <Button
        android:layout_width="@dimen/bluetoothphonebook_btn_set_width"
        android:layout_height="@dimen/bluetoothphonebook_btn_set_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_btn_set_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_btn_set_margintop"
        android:id="@+id/btn_phonebook_set_down"
        android:background="@drawable/btn_bluetoothphonebook_hide"
        android:visibility="gone"/>
    <RelativeLayout
        android:layout_width="@dimen/bluetoothphonebook_layout_frame_width"
        android:layout_height="@dimen/bluetoothphonebook_layout_frame_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_layout_frame_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_layout_frame_margintop"
        android:visibility="gone"
        android:id="@+id/layout_phonebook_frame"
        android:background="@drawable/bluetoothphonebook_hide_frame">

        <ImageButton
            android:layout_width="@dimen/bluetoothphonebook_frame_btn_width"
            android:layout_height="@dimen/bluetoothphonebook_frame_btn_height"
            style="@style/image_button"
            android:background="@drawable/btn_bluetoothphonebook_frame_set"
            android:id="@+id/imgbtn_phonebook_frame_set"
            />
        <TextView
            style="@style/BluetoothPhonebook_frametext_Style"
            android:layout_width="@dimen/bluetoothphonebook_frame_btn_width"
            android:layout_height="@dimen/bluetoothphonebook_frame_btn_height"
            android:text="@string/phonebook_frame_set"
            android:gravity="center"
            />
        <ImageButton
            android:layout_width="122px"
            android:layout_height="@dimen/bluetoothphonebook_frame_btn_height"
            android:layout_marginTop="@dimen/bluetoothphonebook_frame_btn_download_margintop"
			android:layout_marginLeft="2px"
            style="@style/image_button"
            android:background="@drawable/btn_bluetoothphonebook_frame_downloader"
            android:id="@+id/imgbtn_phonebook_frame_download"
            />
        <TextView
            style="@style/BluetoothPhonebook_frametext_Style"
            android:layout_width="@dimen/bluetoothphonebook_frame_btn_width"
            android:layout_height="@dimen/bluetoothphonebook_frame_btn_height"
            android:layout_marginTop="@dimen/bluetoothphonebook_frame_btn_download_margintop"
            android:text="@string/phonebook_frame_download"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="@dimen/bluetoothphonebook_frame_layout_width"
            android:layout_height="@dimen/bluetoothphonebook_frame_layout_height"
            android:layout_marginTop="@dimen/bluetoothphonebook_frame_layout_margintop"
            android:orientation="horizontal">
            <TextView
                style="@style/BluetoothPhonebook_frametext_Style"
                android:layout_width="@dimen/bluetoothphonebook_frame_text_width"
                android:layout_height="match_parent"
                android:text="@string/phonebook_frame_autoanswer"
                android:gravity="center"/>
            <CheckBox
                android:layout_width="@dimen/bluetoothphonebook_frame_check_width"
                android:layout_height="@dimen/bluetoothphonebook_frame_check_height"
                android:layout_marginTop="@dimen/bluetoothphonebook_frame_check_margintop"
                style="@style/my_checkbox"
                android:id="@+id/checkbox_phonebook_check"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/bluetoothphonebook_layout_list_width"
        android:layout_height="@dimen/bluetoothphonebook_layout_list_height"
        android:layout_marginLeft="@dimen/bluetoothphonebook_layout_list_marginleft"
        android:layout_marginTop="@dimen/bluetoothphonebook_layout_list_margintop"
        android:background="@drawable/bluetoothphonebook_list">
        <ListView
            android:layout_width="@dimen/bluetoothphonebook_list_width"
            android:layout_height="@dimen/bluetoothphonebook_list_height"
            android:layout_marginLeft="@dimen/bluetoothphonebook_list_marginleft"
			android:layout_marginTop="5px"
            android:divider="@drawable/bluetoothphonebook_list_lin"
            android:id="@+id/list_phonebook_contacts"
            android:scrollbars="none"
            android:fastScrollEnabled="false"
			android:dividerHeight="1px"
			android:listSelector="@drawable/selector_listview">
        </ListView>
        <ListView
            android:layout_width="@dimen/bluetoothphonebook_list_width"
            android:layout_height="@dimen/bluetoothphonebook_list_height"
            android:layout_marginLeft="@dimen/bluetoothphonebook_list_marginleft"
            android:divider="@drawable/bluetoothphonebook_list_lin"
            android:id="@+id/list_phonebook_callhistroy"
            android:scrollbars="none"
            android:visibility="gone"
            android:fastScrollEnabled="false"
			android:dividerHeight="1px"
			android:listSelector="@drawable/selector_listview">
        </ListView>
        <ListView
            android:layout_width="@dimen/bluetoothphonebook_list_width"
            android:layout_height="@dimen/bluetoothphonebook_list_height"
            android:layout_marginLeft="@dimen/bluetoothphonebook_list_marginleft"
            android:divider="@drawable/bluetoothphonebook_list_lin"
            android:id="@+id/list_phonebook_search"
            android:scrollbars="none"
            android:visibility="gone"
            android:fastScrollEnabled="false"
			android:dividerHeight="1px"
			android:listSelector="@drawable/selector_listview">
        </ListView>
        <RadioGroup
            android:layout_width="@dimen/bluetoothphonebook_radiogroup_width"
            android:layout_height="@dimen/bluetoothphonebook_radiogroup_height"
            android:layout_marginTop="@dimen/bluetoothphonebook_radiogroup_margintop"
            android:id="@+id/radiogrout_downlaoder"
            android:orientation="horizontal">
            <RadioButton
                style="@style/BluetoothSet_Text_Style"
                android:id="@+id/radiobutton_contacts"
                android:layout_width="@dimen/bluetoothphonebook_radiobutton_contacts_width"
                android:layout_height="@dimen/bluetoothphonebook_radiobutton_contacts_height"
				android:layout_marginLeft="@dimen/bluetoothphonebook_radiobutton_contacts_marginleft"
                android:text="@string/phonebook_contacts"
                android:gravity="center"
                android:checked="true"
                android:button="@null"
                android:background="@drawable/radobutton_contacts"
                />
            <RadioButton
                style="@style/BluetoothSet_Text_Style"
                android:id="@+id/radiobutton_call"
                android:layout_width="@dimen/bluetoothphonebook_radiobutton_contacts_width"
                android:layout_height="@dimen/bluetoothphonebook_radiobutton_contacts_height"
                android:text="@string/phonebook_call"
                android:gravity="center"
                android:checked="false"
                android:button="@null"
                android:background="@drawable/radobutton_contacts"
                />
        </RadioGroup>
        <ImageView
            android:layout_width="@dimen/bluetoothset_img_loading_width"
            android:layout_height="@dimen/bluetoothset_img_loading_height"
            android:layout_marginLeft="@dimen/bluetoothphonebook_downloadcontacts_image_marginleft"
            android:layout_marginTop="@dimen/bluetoothphonebook_download_image_margintop"
            android:id="@+id/img_phonebook_downcontacts"
            />
        <ImageView
            android:layout_width="@dimen/bluetoothset_img_loading_width"
            android:layout_height="@dimen/bluetoothset_img_loading_height"
            android:layout_marginLeft="@dimen/bluetoothphonebook_downloadhistory_image_marginleft"
            android:layout_marginTop="@dimen/bluetoothphonebook_download_image_margintop"
            android:id="@+id/img_phonebook_downhistory"
            />

    </RelativeLayout>

</RelativeLayout>
